# helesta

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  flat_includes.py  formatting.cmake  judger.py  run.sh
.cache/clangd/index/: ANTLRErrorListener.cpp.738B5CD711B43D53.idx  ANTLRErrorListener.h.70CE932FFBB75882.idx  ANTLRErrorStrategy.cpp.76E39985F6DC8339.idx  ANTLRErrorStrategy.h.8DC7F2EE4490BDC8.idx  ANTLRFileStream.cpp.ECAFA980966065F1.idx  ANTLRFileStream.h.53C93355D20B2141.idx  ANTLRInputStream.cpp.D0388929C2C936DA.idx  ANTLRInputStream.h.7D424455F6D7930F.idx  ATN.cpp.6088AFC65DAB6C15.idx  ATN.h.9DE5979B78AFEB9C.idx  ATNConfig.cpp.4A499FB74CE30C04.idx  ATNConfig.h.C2E7AFDDC66D7198.idx  ATNConfigSet.cpp.2F4568E1A0FEBFB0.idx  ATNConfigSet.h.38BB1E34557325B6.idx  ATNDeserializationOptions.cpp.A3F0D7FE2F5CE17F.idx  ATNDeserializationOptions.h.C8BA9861A81FC8DB.idx  ATNDeserializer.cpp.D719CED37B2F6024.idx  ATNDeserializer.h.38472208FDDBD72C.idx  ATNSimulator.cpp.AD8F02327B05EBAF.idx  ATNSimulator.h.CE700E44BCCD2A9F.idx  ATNState.cpp.924CB5A3FFA75E47.idx  ATNState.h.789CE08DD8EC0B07.idx  ATNStateType.cpp.76F90D1BC45878AB.idx  ATNStateType.h.E864B395F127BE73.idx  ATNType.h.64C99F6B642B2D1B.idx  AbstractParseTreeVisitor.h.815FB5137F82784F.idx  ActionTransition.cpp.BA8ACD5ADF2782A3.idx  ActionTransition.h.2D841CD6EF651949.idx  AmbiguityInfo.cpp.8549C0263F6B186E.idx  AmbiguityInfo.h.EBB6FF3F05276A8D.idx  Any.cpp.524C41A32456C492.idx  Any.h.8A6A45C0135D44D2.idx  ArrayPredictionContext.cpp.41C482D917CA3FD8.idx  ArrayPredictionContext.h.15A96EBD8B1B3DC2.idx  Arrays.cpp.6BDAAF385C09AFC0.idx  Arrays.h.2521642D6C33D340.idx  AtomTransition.cpp.FB888C79241B15AA.idx  AtomTransition.h.24D5C57966F26DA5.idx  BailErrorStrategy.cpp.2FBF4EF1105CF296.idx  BailErrorStrategy.h.91BD220429E284D2.idx  (+286 more)
.github/workflows/: check.yml  cmake.yml
ast/: ast_visitor.cpp  init_value.cpp  symbol_table.hpp
common/: common.cpp
doc/: arch.md  report.tex
ir/: loop.cpp
parser/: SysYBaseListener.h  SysYBaseVisitor.cpp  SysYVisitor.h
scripts/: clear_testcase_exes.py  flat_includes.py  run_all.py  test_all.py
src/: main.cpp
src/arm/: archinfo.hpp  backend_passes.cpp  backend_passes.hpp  block.cpp  block.hpp  coloring_alloc.cpp  func.cpp  func.hpp  inst.cpp  inst.hpp  irc_coloring_alloc.hpp  merge_inst.cpp  merge_inst.hpp  program.cpp  program.hpp  regalloc.hpp  simple_coloring_alloc.cpp  simple_coloring_alloc.hpp
src/arm/opt/: afterplay.hpp  dce.cpp  eliminate_branch.cpp  foreplay.hpp  merge_instr.cpp  opt.hpp  remove_empty_blocks.cpp  remove_trivial_inst.cpp  replace_complex_instr.cpp  replace_pseduo_inst.cpp
src/ast/: ast_visitor.cpp  ast_visitor.hpp  exp_value.cpp  exp_value.hpp  init_value.cpp  init_value.hpp  symbol_table.cpp  symbol_table.hpp
src/common/: common.cpp  common.hpp  errors.hpp
src/frontend/: SysYBaseListener.cpp  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYParser.cpp  SysYParser.h
src/ir/: dce.cpp  dom_tree.cpp  exec.cpp  func_inline.cpp  ir.cpp  ir.hpp  loop.cpp  pass.cpp  pass.hpp  scalar.hpp  simd.cpp  ssa.cpp
src/ir/opt/: add_expr.hpp  arith.cpp  bb_ops.cpp  call_graph.cpp  dag_ir.cpp  dag_ir.hpp  dom.cpp  dom.hpp  func_inline.cpp  gcm.cpp  global_to_local.cpp  global_value_numbering.cpp  gvn.cpp  loop.cpp  loop.hpp  loop_ops.cpp  mem2reg.cpp  opt.hpp  pretty_print.cpp  remove_unused_def.cpp  side_effect.cpp  simplify_expr.cpp  simplify_load_store.cpp  special.cpp  ssa_constrcution.cpp  typecheck.cpp
src/parser/: .clang-format  CommonLex.g4  SysY.g4  SysY.interp  SysY.tokens  SysYBaseListener.cpp  SysYBaseListener.h  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYListener.cpp  SysYListener.h  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h
testcases/custom/: exgcd.sy  float_16777217.out  float_16777217.sy  issue-115.sy  issue-118.in  issue-118.out  issue-118.sy  issue-121.out  issue-121.sy  issue-125.out  issue-125.sy  issue-131.in  issue-131.out  issue-131.sy  issue-154.sy  putfloat.out  putfloat.sy  test_simd_1.out  test_simd_1.sy
testcases/functional/: 68_brainfk.out
testcases/hidden_functional/: 01_multiple_returns.sy  02_ret_in_block.sy  03_branch.sy  04_break_continue.sy  09_BFS.in  09_BFS.sy  10_DFS.in  10_DFS.sy  11_BST.in  11_BST.sy  12_DSU.sy  13_LCA.sy  14_dp.in  14_dp.sy  15_graph_coloring.sy  16_k_smallest.in  16_k_smallest.sy  17_maximal_clique.sy  18_prim.in  18_prim.sy  19_search.in  19_search.sy  20_sort.sy  21_union_find.in  21_union_find.sy  22_matrix_multiply.in  22_matrix_multiply.sy  26_scope4.sy  28_side_effect2.sy  30_many_dimensions.sy  31_many_indirections.sy  32_many_params3.sy  33_multi_branch.in  33_multi_branch.sy  34_multi_loop.sy
testcases/performance/: conv2.sy
